<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.add.AddActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/tv_image"
            android:layout_width="310dp"
            android:layout_height="350dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_pictures_placeholder"
            tools:ignore="ImageContrastCheck" />

        <Button
            android:id="@+id/btnCamera"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/camera"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_image" />

        <Button
            android:id="@+id/btn_galery"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/galery"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_image" />

        <EditText
            android:id="@+id/input_desc"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="top"
            android:hint="@string/description"
            android:background="@drawable/round_border"
            android:inputType="text|textMultiLine"
            android:padding="16dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_galery"
            android:autofillHints="" />

        <TextView
            android:id="@+id/latView"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/lati"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/input_desc"
            app:layout_constraintTop_toBottomOf="@+id/input_desc" />

        <TextView
            android:id="@+id/latValue"
            android:layout_width="128dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/value"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/latView"
            app:layout_constraintTop_toBottomOf="@+id/input_desc" />

        <TextView
            android:id="@+id/lonView"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/loni"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/latView"
            app:layout_constraintTop_toBottomOf="@+id/latView" />

        <TextView
            android:id="@+id/lonValue"
            android:layout_width="128dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/value"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/lonView"
            app:layout_constraintTop_toBottomOf="@+id/latValue" />


        <Button
            android:id="@+id/btnUpload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/upload"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/input_desc"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/input_desc"
            app:layout_constraintTop_toBottomOf="@+id/lonView"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnLocStory"
            android:layout_width="wrap_content"
            android:layout_height="503dp"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/purple_500"
            android:backgroundTintMode="add"
            android:src="@drawable/ic_add_location"
            app:layout_anchorGravity="bottom|right|end"
            app:layout_constraintBottom_toTopOf="@+id/btnUpload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.814"
            app:layout_constraintStart_toEndOf="@+id/latValue"
            app:layout_constraintTop_toBottomOf="@+id/input_desc"
            app:layout_constraintVertical_bias="0.75"
            tools:ignore="ContentDescription,RtlHardcoded,SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>